# ffi-boundary-bench

./: .gitignore  CMakeLists.txt  LICENSE  README.md
platform/.Net8/: PInvoke Bench.csproj  PInvoke Bench.sln  Program.cs
platform/Android/: settings.gradle
platform/Android/app/: build.gradle
platform/Android/app/src/main/: AndroidManifest.xml
platform/Android/app/src/main/cpp/: jni_bridge.cpp
platform/Android/app/src/main/java/com/ffibb/android/: AndroidBenchmarkRunner.java  BenchmarkBridge.java  BenchmarkCase.java  BenchmarkMeasurement.java  BenchmarkReportFormatter.java  BenchmarkRow.java  BenchmarkSink.java  BenchmarkTimer.java  BinaryModel.java  BinaryModelPayloadFactory.java  BinaryModelWireCodec.java  MainActivity.java  U32PayloadCodec.java
platform/Android/gradle/: libs.versions.toml
platform/Android/gradle/wrapper/: gradle-wrapper.properties
platform/Apple/Scripts/: build_xcframework.sh
platform/Emscripten/: README.md  ffibb_wasm_bindings.cpp  package.json
platform/Emscripten/src/: benchmark_case.js  benchmark_report_formatter.js  benchmark_runner.js  benchmark_timer.js  binary_model_wire_codec.js  node_main.js  u32_payload_codec.js  wasm_bridge.js
platform/Java22/: .gitignore  build.gradle  settings.gradle
platform/Java22/gradle/wrapper/: gradle-wrapper.properties
platform/Java22/src/main/java/com/ffibb/java22/: BenchmarkMain.java  FfmBindings.java
platform/JvmWasm/: README.md  build.gradle  settings.gradle
platform/JvmWasm/src/main/java/com/ffibb/jvmwasm/: BenchmarkMain.java  BenchmarkSupport.java  ChicoryWasmRuntime.java  GraalWasmRuntime.java  WasmRuntime.java
platform/OHOS/AppScope/: app.json5
platform/OHOS/AppScope/resources/base/element/: string.json
platform/OHOS/entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
platform/OHOS/entry/src/main/cpp/: napi_init.cpp
platform/OHOS/entry/src/main/cpp/types/libffibb/: Index.d.ts  oh-package.json5
platform/OHOS/entry/src/main/ets/benchmark/: BenchmarkBridge.ets  BenchmarkCase.ets  BenchmarkMeasurement.ets  BenchmarkReportFormatter.ets  BenchmarkRow.ets  BenchmarkSink.ets  BenchmarkTimer.ets  BinaryModel.ets  BinaryModelPayloadFactory.ets  BinaryModelWireCodec.ets  OhosBenchmarkRunner.ets  U32PayloadCodec.ets
platform/OHOS/entry/src/main/ets/pages/: Index.ets
platform/iOS/: .gitignore
platform/iOS/FFI Bench/: ContentView.swift
platform/iOS/FFI Bench.xcodeproj/: project.pbxproj
platform/iOS/FFI Bench.xcodeproj/xcshareddata/xcschemes/: FFI Bench.xcscheme
platform/macOS/: .gitignore
platform/macOS/FFI Bench/: ContentView.swift  FFI_BenchApp.swift
platform/macOS/FFI Bench.xcodeproj/: project.pbxproj
platform/macOS/FFI Bench.xcodeproj/xcshareddata/xcschemes/: FFI Bench.xcscheme
src/c_api/: ffibb_c_api.cpp
src/core/: benchmark_data.cpp  benchmark_data.h  binary_model_codec.cpp  binary_model_codec.h  common_types.h  compact_u32_codec.cpp  compact_u32_codec.h
src/runner/: native_benchmark_main.cpp
